--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <main class="main">
   <app-headerbar></app-headerbar>
-  <app-sidebar></app-sidebar>
+  <div class="content">
+    <app-sidebar></app-sidebar>
+    <app-main-content></app-main-content>
+  </div>
 </main>
