--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
   <div class="profile-side-bar">
-    <img src="" alt="Teste">
+    <img class="abrigo-logo" src="../../assets/uvv-brasao.png" alt="Teste">
     <div class="contato">
     <h1 class="abrigo-nome">Nome genérico</h1>
     <h3 class="abrigo-email">emailemail.com</h3>
