--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -8,6 +8,11 @@
   height: 53.5em;
 }
 
+.abrigo-logo{
+  width: 16em;
+  border-radius: 50%;
+}
+
 .profile-side-bar{
   display: flex;
   justify-content: center;
