Reorganize components, create modal structure

--- a/src/app/components/headerbar/headerbar.component.html
+++ b/src/app/components/headerbar/headerbar.component.html
@@ -7,7 +7,7 @@
     </div>
     <div>
         <button class="button-login">
-            <img src="../../assets/user.png" alt="icon profile">
+            <img src="../../../assets/user.png" alt="icon profile">
             <h2>Fazer Login</h2>
         </button>
     </div>
