--- a/src/app/components/searchbar/searchbar.component.css
+++ b/src/app/components/searchbar/searchbar.component.css
@@ -4,15 +4,18 @@ div {
 }
 
 div input {
-  background-image: url('../../assets/search.png');
+  background-image: url('../../../assets/search.png');
   background-size: 20px 20px; /* Adjust the size as needed */
   background-repeat: no-repeat;
   background-position: right 10px center; /* Align the icon to the right */
-  padding-right: 40px; /* Adjust the padding to leave space for the icon on the right */
-  width: 100%;
-  padding: 12px 20px;
+  
   margin: 8px 0;
+  padding-right: 40px; /* Adjust the padding to leave space for the icon on the right */
+  padding: 12px 20px;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+
+  display: inline-block;
+  width: 100%;
 }
