--- a/src/app/screens/searchscreen/searchscreen.component.html
+++ b/src/app/screens/searchscreen/searchscreen.component.html
@@ -1,7 +1,8 @@
-<section>
+<section class="titulo-searchbox-section">
   <div class="titulo-header">
     <h1>Get-a-pet</h1>
     <h4>Seu melhor amigo está te esperando</h4>
   </div>
   <app-searchbar [label]="'Pesquise seu Endereço'"></app-searchbar>
+  <app-modal-help-shelter />
 </section>
