Add modal-help-shelter structure

--- a/src/app/components/modal-help-shelter/modal-help-shelter.component.html
+++ b/src/app/components/modal-help-shelter/modal-help-shelter.component.html
@@ -1,3 +1,12 @@
 <app-modal>
-    <p>Works</p>
+    <h1>Apoie o abrigo</h1>
+    <p>Banco de exemplo</p>
+    <p>AdoteUmPetVV</p>
+    <p>CNPJ: 12345678/0000-0000</p>
+    <p>Agência: 00</p>
+    <p>Conta corrente: 1234567-0</p>
+    <p>Pix: 12345678900000</p>
+    <p>Picpay: &#64;adoteumpet</p>
+
+    <app-button [text]="'Fechar'"/>
 </app-modal>
