--- a/src/app/animal-profile/animal-profile.component.html
+++ b/src/app/animal-profile/animal-profile.component.html
@@ -2,8 +2,8 @@
   <div class="animal">
 
     <div class="div-animal-nome">
-      <h1>Zeus</h1>
-      <h4>Disponivel para adocao desde</h4>
+      <h1>Nome</h1>
+      <h4>Disponivel para adoção desde</h4>
     </div>
     <div class="div-imagens">
       <button class="button-principal">
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div class="div-descricao">
-      <h1>Descricao</h1>
+      <h1>Descrição</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam</p>
     </div>
 
@@ -31,11 +31,12 @@
   <div class="abrigo">
     <div class="abrigo-info">
       <div class="abrigo-info-nome">
-        <h2>PetsUVV</h2>
+        <h2>Nome abrigo</h2>
       </div>
-      <div>
-        <h2>Endereco</h2>
-        <h4></h4>
+      <div class="abrigo-info-endereco">
+        <h2>Localização</h2>
+        <h4>Cidade</h4>
+        <h4>Bairro</h4>
       </div>
       <div class="abrigo-info-contato">
         <h2>Contato</h2>
