--- a/src/app/components/main-content/main-content.component.html
+++ b/src/app/components/main-content/main-content.component.html
@@ -1,1 +1,44 @@
-<p>main-content works!</p>
+<section>
+  <div class="header-anuncios">
+    <h1>Pets para adoção</h1>
+    <button class="botao-criar-anuncio">Criar anuncio de adoção</button>
+  </div>
+  <div class="anuncios-abrigo">
+    <div class="animal-anuncio">
+      <img src="" alt="">
+      <div class="descricao-anuncio">
+        <h2>Nome animal</h2>
+        <p>Anunciado em</p>
+        <button class="botao-editar-anuncio">Editar anúncio de adoção</button>
+        <button class="botao-excluir-anuncio">Excluir anúncio de adoção</button>
+      </div>
+    </div>
+    <div class="animal-anuncio">
+      <img src="" alt="">
+      <div class="descricao-anuncio">
+        <h2>Nome animal</h2>
+        <p>Anunciado em</p>
+        <button class="botao-editar-anuncio">Editar anúncio de adoção</button>
+        <button class="botao-excluir-anuncio">Excluir anúncio de adoção</button>
+      </div>
+    </div>
+    <div class="animal-anuncio">
+      <img src="" alt="">
+      <div class="descricao-anuncio">
+        <h2>Nome animal</h2>
+        <p>Anunciado em</p>
+        <button class="botao-editar-anuncio">Editar anúncio de adoção</button>
+        <button class="botao-excluir-anuncio">Excluir anúncio de adoção</button>
+      </div>
+    </div>
+    <div class="animal-anuncio">
+      <img src="" alt="">
+      <div class="descricao-anuncio">
+        <h2>Nome animal</h2>
+        <p>Anunciado em</p>
+        <button class="botao-editar-anuncio">Editar anúncio de adoção</button>
+        <button class="botao-excluir-anuncio">Excluir anúncio de adoção</button>
+      </div>
+    </div>
+  </div>
+</section>
