Finish popup open/close logic at animal-form

--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,1 +1,1 @@
-<button class="getpet-button-secondary">{{ text }}</button>
+<button class="getpet-button" (click)="sendClickEvent()">{{ text }}</button>
