--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
 <main class="main">
   <app-headerbar></app-headerbar>
-  <app-searchscreen></app-searchscreen>
-  <!-- <app-sidebar></app-sidebar> -->
-  <!-- <app-main-content></app-main-content> -->
+  <app-animal-profile />
 </main>
