--- a/src/app/screens/animal-profile/animal-profile.component.html
+++ b/src/app/screens/animal-profile/animal-profile.component.html
@@ -42,7 +42,10 @@
         <h4>petscontato.com.br</h4>
         <h4>(27)99999-9999</h4>
       </div>
-      <button>Página do abrigo</button>
+
+      <app-button [text]="'Página do Abrigo'" (clickEvent)="recieveEvent($event)"/>
     </div>
   </div>
 </div>
+
+<app-modal-help-shelter [visible]="shelterModalVisible" (notifyParent)="triggerModalClosure()" />
