--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -9,6 +9,7 @@
   </div>
   <div class="abrigo-buttons">
     <button>Editar dados</button>
-    <button>Apoiar abrigo</button>
+    <app-button [text]="'Apoiar abrigo'" (clickEvent)="recieveEvent($event)"/>
   </div>
 </div>
+<app-modal-help-shelter [visible]="shelterModalVisible" (notifyParent)="triggerModalClosure()" />
