--- a/src/app/screens/cadastro-screen/cadastro-screen.component.html
+++ b/src/app/screens/cadastro-screen/cadastro-screen.component.html
@@ -3,14 +3,14 @@
     <div class="cadastro-box-form">
       <h3>Tem um abrigo?</h3>
       <h1>Crie sua Conta no Get-a-Pet</h1>
-      <input class="input input-normal" placeholder="Nome do Abrigo" type="text">
-      <input class="input input-normal" placeholder="E-mail" type="text">
-      <input class="input input-normal" placeholder="Número de telefone" type="text">
-      <input class="input input-normal" placeholder="Cidade" type="text">
-      <input class="input input-normal" placeholder="Bairro" type="text">
+      <input required class="input input-normal" placeholder="Nome do Abrigo" type="text">
+      <input required class="input input-normal" placeholder="E-mail" type="text">
+      <input required class="input input-normal" placeholder="Número de telefone" type="text">
+      <input required class="input input-normal" placeholder="Cidade" type="text">
+      <input required class="input input-normal" placeholder="Bairro" type="text">
       <div class="div-senhas">
-        <input class="input input-senha" placeholder="Senha" type="password">
-        <input class="input input-senha" placeholder="Confirmar senha" type="password">
+        <input required class="input input-senha" placeholder="Senha" type="password">
+        <input required class="input input-senha" placeholder="Confirmar senha" type="password">
         <p>Use oito ou mais caracteres com combinação de letras, números e símbolos</p>
       </div>
       <div class="botoes-div">
