--- a/src/app/screens/login-screen/login-screen.component.html
+++ b/src/app/screens/login-screen/login-screen.component.html
@@ -5,7 +5,7 @@
       <h1>Fazer Login</h1>
     </div>
     <div class="form-login">
-      <input required placeholder="Login" type="text">
+      <input required placeholder="E-mail" type="text">
       <input required placeholder="Senha" type="password">
     </div>
     <div class="botoes-login">
