Cria tela de listagem de animais (resultados da pesquisa)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <main class="main">
   <app-headerbar></app-headerbar>
-  <app-login-screen></app-login-screen>
+  <app-results-screen></app-results-screen>
+  <!-- <app-login-screen></app-login-screen> -->
   <!-- <app-abrigo-screen></app-abrigo-screen> -->
   <!-- <app-animal-profile></app-animal-profile> -->
   <!-- <app-searchscreen></app-searchscreen> -->
