--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-<main class="main">
-  <app-headerbar></app-headerbar>
-  <app-abrigo-screen></app-abrigo-screen>
-  <!--<app-animal-profile></app-animal-profile> -->
-  <!-- <app-searchscreen></app-searchscreen> -->
-  <!-- <app-sidebar></app-sidebar> -->
-  <!-- <app-main-content></app-main-content> -->
-</main>
+<router-outlet></router-outlet>
