Add navigation from search to login

--- a/src/app/components/headerbar/headerbar.component.html
+++ b/src/app/components/headerbar/headerbar.component.html
@@ -6,7 +6,7 @@
         </div>
     </div>
     <div>
-        <button class="button-login">
+        <button class="button-login" (click)="navigateToLogin()">
             <img src="../../../assets/user.png" alt="icon profile">
             <h2>Fazer Login</h2>
         </button>
