--- a/src/app/screens/abrigo-screen/abrigo-screen.component.html
+++ b/src/app/screens/abrigo-screen/abrigo-screen.component.html
@@ -1,4 +1,7 @@
+<app-headerbar />
 <section class="titulo-searchbox-section">
   <app-sidebar></app-sidebar>
-  <app-main-content></app-main-content>
+  <app-main-content (notifyParentEdit)="recieveEditEvent()" (notifyParentDelete)="recieveDeleteEvent()"></app-main-content>
 </section>
+<app-modal-edit-announcement [visible]="editModalVisible" (notifyEditClosure)="triggerEditModalClosure()" />
+<app-modal-delete-announcement [visible]="deleteModalVisible" (notifyDeleteClosure)="triggerDeleteModalClosure()" />
