--- a/src/app/components/main-content/main-content.component.html
+++ b/src/app/components/main-content/main-content.component.html
@@ -4,44 +4,14 @@
     <button class="botao-criar-anuncio">Criar anuncio de adoção</button>
   </div>
   <div class="anuncios-abrigo">
-    <div class="animal-anuncio">
+    <div class="animal-anuncio" *ngFor="let pet of pets">
       <img src="" alt="">
       <div class="descricao-anuncio">
-        <h2>Nome animal</h2>
-        <p>Anunciado em</p>
-        <app-button [text]="'Editar anúncio de adoção'" (clickEvent)="recieveEditEvent()"/>
-        <!-- <button class="botao-editar-anuncio">Editar anúncio de adoção</button> -->
-        <app-button [text]="'Excluir anúncio de adoção'" (clickEvent)="recieveDeleteEvent()"/>
-        <!-- <button class="botao-excluir-anuncio">Excluir anúncio de adoção</button> -->
-      </div>
-    </div>
-    <div class="animal-anuncio">
-      <img src="" alt="">
-      <div class="descricao-anuncio">
-        <h2>Nome animal</h2>
-        <p>Anunciado em</p>
-        <button class="botao-editar-anuncio">Editar anúncio de adoção</button>
-        <button class="botao-excluir-anuncio">Excluir anúncio de adoção</button>
-      </div>
-    </div>
-    <div class="animal-anuncio">
-      <img src="" alt="">
-      <div class="descricao-anuncio">
-        <h2>Nome animal</h2>
-        <p>Anunciado em</p>
-        <button class="botao-editar-anuncio">Editar anúncio de adoção</button>
-        <button class="botao-excluir-anuncio">Excluir anúncio de adoção</button>
-      </div>
-    </div>
-    <div class="animal-anuncio">
-      <img src="" alt="">
-      <div class="descricao-anuncio">
-        <h2>Nome animal</h2>
-        <p>Anunciado em</p>
-        <button class="botao-editar-anuncio">Editar anúncio de adoção</button>
-        <button class="botao-excluir-anuncio">Excluir anúncio de adoção</button>
+        <h2>{{pet.name}}</h2>
+        <p>Anunciado em: {{pet.formattedDate}}</p>
+        <app-button-alt [text]="'Editar anúncio de adoção'" (clickEvent)="recieveEditEvent()"/>
+        <app-button-alt [text]="'Excluir anúncio de adoção'" [className]="'getpet-button-alt-delete'" (clickEvent)="recieveDeleteEvent()"/>
       </div>
     </div>
   </div>
 </section>
-
