--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -1,3 +1,3 @@
 <div>
-  <input type="text" placeholder="{{ label }}" />
+  <input type="text" placeholder="{{ label }}" conten (keyup.enter)="onEnter($event)" />
 </div>
