--- a/src/app/screens/login-screen/login-screen.component.html
+++ b/src/app/screens/login-screen/login-screen.component.html
@@ -5,15 +5,15 @@
       <h1>Fazer Login</h1>
     </div>
     <div class="form-login">
-      <input required placeholder="E-mail" type="text">
-      <input required placeholder="Senha" type="password">
+      <input required placeholder="E-mail" type="text" [(ngModel)]="email">
+      <input required placeholder="Senha" type="password" [(ngModel)]="password">
     </div>
     <div class="botoes-login">
       <div>
         <h5>Não tem uma conta?</h5>
         <button class="botao-criar-conta">Criar Conta</button>
       </div>
-      <button class="botao-entrar">Entrar</button>
+      <button class="botao-entrar" (click)="handleLogin()">Entrar</button>
     </div>
   </div>
 </section>
