--- a/src/app/screens/results-screen/results-screen.component.html
+++ b/src/app/screens/results-screen/results-screen.component.html
@@ -2,12 +2,12 @@
 <section>
   <div class="listagem-animais">
 
-    <div class="animal-anuncio" *ngFor="let pet of pets">
+    <div class="animal-anuncio" *ngFor="let pet of pets" (click)="animalCardClick(pet.id)">
       <img src="" alt="">
       <div class="descricao-anuncio">
         <h2>{{pet.name}}</h2>
         <p class="nome-abrigo">{{pet.shelter.name}}</p>
-        <p>{{pet.shelter.location}}</p>
+        <p>{{pet.shelter.city}}</p>
       </div>
     </div>
   </div>
