--- a/src/app/components/button-alt/button-alt.component.css
+++ b/src/app/components/button-alt/button-alt.component.css
@@ -5,8 +5,7 @@
   border-radius: 12px;
   padding: 8px;
   width: 16em;
-  margin-top: 12px;
-  margin-bottom: 4px;
+  margin-top: 10px;
 }
 
 .getpet-button-alt:hover {
@@ -21,9 +20,26 @@
   border-radius: 12px;
   padding: 8px;
   width: 16em;
+  margin-top: 10px;
 }
 
 .getpet-button-alt-delete:hover{
   background-color: #922d2d;
+  cursor: pointer;
+}
+
+.getpet-button-alt-secondary{
+  color: #b41dc1;
+  background-color: white;
+  border: none;
+  box-shadow: inset -2px 0 0 #b41dc1, inset 0 -2px 0 #b41dc1, inset 2px 0 0 #b41dc1, inset 0 2px 0 #b41dc1; /* Fake internal border */
+  border-radius: 12px;
+  padding: 8px;
+  width: 16em;
+  margin-top: 10px;
+}
+
+.getpet-button-alt-secondary:hover{
+  background-color: gainsboro;
   cursor: pointer;
 }
