--- a/src/app/components/modal-edit-announcement/modal-edit-announcement.component.html
+++ b/src/app/components/modal-edit-announcement/modal-edit-announcement.component.html
@@ -1,5 +1,30 @@
 <app-modal [visible]="visible">
     <h1>Editar</h1>
 
-    <app-button [text]="'Fechar'" (clickEvent)="recieveEvent()"/>
+    <h3>Nome</h3>
+    <input required placeholder="Digite seu nome" type="Digite seu nome" [(ngModel)]="name">
+    
+    <h3>Logo</h3>
+    <label for="upload">
+        <p>Insira uma logo</p>
+        <input type="file" id="upload" style="display:none">
+        <img src="../../../assets/attachment.svg" alt="delete icon">
+    </label>
+    
+    <h3>E-mail</h3>
+    <input required placeholder="Digite seu e-mail" type="text" [(ngModel)]="email">
+    
+    <h3>Telefone</h3>
+    <input required placeholder="Digite seu telefone" type="text" [(ngModel)]="phone">
+    
+    <h3>Endereço</h3>
+    <input required placeholder="Digite seu endereço" type="text" [(ngModel)]="address">
+    
+    <h3>Informações para apoio financeiro</h3>
+    <input required placeholder="Digite seus dados bancários" type="text" [(ngModel)]="email">
+
+    <div class="row">
+        <app-button-alt [text]="'Cancelar'" (clickEvent)="recieveEvent()" [className]="'getpet-button-alt-secondary'"/>
+        <app-button-alt [text]="'Salvar'" (clickEvent)="recieveSaveEvent()" [className]="'getpet-button-alt'"/>
+    </div>
 </app-modal>
