--- a/src/app/screens/register-screen/register-screen.component.css
+++ b/src/app/screens/register-screen/register-screen.component.css
@@ -14,30 +14,41 @@ section {
 
 .header-login {
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: center;
   flex-direction: column;
 }
 
 .header-login h1 {
-  margin-top: 1em;
+  margin-top: 0.5em;
+}
+
+.header-login h4 {
+  font-size: small;
 }
 
 .form-login {
   display: flex;
-  align-items: flex-start;
+  align-items: cen;
   flex-direction: column;
   margin-top: 1em;
   margin-bottom: 1em;
+  width: 30em;
 }
 
-.form-login input {
+.form-login input:not([type=checkbox]) {
   border: 1px solid #b41dc1;
   border-radius: 4px;
   height: 2.5em;
   padding-left: 8px;
   margin-top: 8px;
-  width: 20em;
+  /* width: 20em; */
+}
+
+.form-login h4 {
+  font-size: small;
+  color: #888;
+  margin-left: 10px;
 }
 
 .botoes-login {
@@ -69,4 +80,36 @@ section {
 .botao-criar-conta:hover {
   color: #7a2f81;
   cursor: pointer;
+}
+
+.two-columns {
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 300px;
+}
+
+.gap {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+input[type=checkbox] {
+  vertical-align: middle; 
+  position: relative; 
+  bottom: 1px; 
+}
+
+label {
+  display: block;
+  margin-top: 20px;
 }
