--- a/src/app/screens/register-screen/register-screen.component.html
+++ b/src/app/screens/register-screen/register-screen.component.html
@@ -2,17 +2,48 @@
 <section>
   <div class="login-box">
     <div class="header-login">
-      <h4>Get-a-Pet</h4>
+      <h4>Tem um abrigo?</h4>
       <h1>Criar sua conta no Get-a-Pet</h1>
     </div>
-    <div class="form-login">
-      <input required placeholder="E-mail" type="text" />
-      <input required placeholder="Senha" type="password" />
+    <div class="two-columns">
+      <div class="form-login">
+        <input required placeholder="Nome do Abrigo" type="text" />
+        <input required placeholder="E-mail" type="text" />
+        <input required placeholder="Número de Telefone" type="text" />
+        <input required placeholder="Localização" type="text" />
+        <div class="gap">
+          <input required placeholder="Senha" [type]="checkboxSelected ? 'text' : 'password'" />
+          <input required placeholder="Confirmar a Senha" [type]="checkboxSelected ? 'text' : 'password'" />
+        </div>
+        <h4>
+          Use oito ou mais caracteres com combinação de letras, números e
+          símbolos
+        </h4>
+        <label>
+          <input
+            type="checkbox"
+            id="showPassword"
+            name="showPassword"
+            [checked]="checkboxSelected"
+            (change)="checkboxSelected = !checkboxSelected"
+          />
+          Mostrar senha
+        </label>
+      </div>
+      <div class="center">
+        <img src="../../../assets/cachorro-cadastro.png" alt="delete icon" />
+        <p>
+          Seja bem vindo ao Get-a-Pet, uma plataforma para cadastrar pets para
+          adoção
+        </p>
+      </div>
     </div>
     <div class="botoes-login">
       <div>
-        <h5>Já tem uma conta?</h5>
-        <button class="botao-criar-conta">Faça login em vez disso</button>
+        <p>Já tem uma conta?</p>
+        <button class="botao-criar-conta" (click)="goToLogin()">
+          Faça login em vez disso
+        </button>
       </div>
       <button class="botao-entrar">Criar Conta</button>
     </div>
