--- a/src/app/screens/cadastro-screen/cadastro-screen.component.html
+++ b/src/app/screens/cadastro-screen/cadastro-screen.component.html
@@ -18,7 +18,7 @@
           <label>Já tem uma conta?</label>
           <button class="login-button">Faça login em vez disso</button>
         </div>
-        <button class="criar-conta-button">Criar conta</button>
+        <button (click)="addAbrigo()" class="criar-conta-button">Criar conta</button>
       </div>
     </div>
     <div class="cadastro-box-imagem">
