--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -2,9 +2,9 @@
   <div class="profile-side-bar">
     <img class="abrigo-logo" src="../../assets/uvv-brasao.png" alt="Teste" />
     <div class="contato">
-      <h1 class="abrigo-nome">Nome genérico</h1>
-      <h3 class="abrigo-email">emailemail.com</h3>
-      <h3 class="abrigo-telefone">(27)88888-8888</h3>
+      <h1 class="abrigo-nome">{{abrigo$.name}}</h1>
+      <h3 class="abrigo-email">{{abrigo$.email}}</h3>
+      <h3 class="abrigo-telefone">{{abrigo$.telefone}}</h3>
     </div>
   </div>
   <div class="abrigo-buttons">
@@ -18,6 +18,6 @@
 <app-modal-edit-announcement [visible]="shelterEditModalVisible" />
 <app-modal-help-shelter
   [visible]="shelterModalVisible"
-  
+  [description]="abrigo$.descricao"
   (notifyParent)="triggerShelterModalClosure()"
 />
