--- a/src/app/components/modal-delete-announcement/modal-delete-announcement.component.html
+++ b/src/app/components/modal-delete-announcement/modal-delete-announcement.component.html
@@ -3,7 +3,7 @@
         <h1>Aviso</h1>
         <div class="row">
             <img src="../../../assets/warning.svg" alt="delete icon">
-            <p>Você deseja excluir xx dos animais cadastrados para doação?</p>
+            <p>Você deseja excluir esse animal cadastrado para adoção?</p>
         </div>
     </div>
 
