--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -18,6 +18,6 @@
 <app-modal-edit-announcement [visible]="shelterEditModalVisible" />
 <app-modal-help-shelter
   [visible]="shelterModalVisible"
-  [description]="abrigo$.descricao"
+  [description]="abrigo$.description"
   (notifyParent)="triggerShelterModalClosure()"
 />
