--- a/src/app/components/animal-form/animal-form.component.html
+++ b/src/app/components/animal-form/animal-form.component.html
@@ -1,12 +1,12 @@
   <div class="principal">
     <div class="div-esquerda-form-animal">
 
-      <form class="div-animal-nome">
-        <label for="animal-nome"><h1>Animal</h1></label>
-        <input type="text">
-      </form>
+      <div class="div-animal-nome">
+        <label for="animal-nome"><h1>Nome:</h1></label>
+        <input [(ngModel)]="name" type="text">
+      </div>
 
-      <form class="div-imagens-animal">
+      <div class="div-imagens-animal">
 
         <button class="button-principal">
           <img class="img-principal-animal" src="" alt="">
@@ -26,20 +26,20 @@
 
         </div>
 
-      </form>
+      </div>
 
-      <form class="form-descricao">
+      <div class="form-descricao">
 
-        <label for=""><h1>Descricao</h1></label>
-        <input type="text">
+        <label for=""><h1>Descrição:</h1></label>
+        <input type="text" [(ngModel)]="description" >
 
-      </form>
+      </div>
 
      <div>
     </div>
   </div>
   <div class="div-direita-form-animal">
-    <button class="button-publicar">Publicar</button>
+    <button (click)="addAnimal()" class="button-publicar">Publicar</button>
     <button class="button-cancelar">Cancelar</button>
   </div>
 </div>
