--- a/src/app/components/animal-form/animal-form.component.html
+++ b/src/app/components/animal-form/animal-form.component.html
@@ -9,22 +9,9 @@
       <div class="div-imagens-animal">
 
         <button class="button-principal">
+          <input type="file">
           <img class="img-principal-animal" src="" alt="">
         </button>
-
-        <div class="div-imagens-secundarias-animal">
-
-          <button class="button-secundario">
-            <img src="" alt="">
-          </button>
-          <button class="button-secundario">
-            <img src="" alt="">
-          </button>
-          <button class="button-secundario">
-            <img src="" alt="">
-          </button>
-
-        </div>
 
       </div>
 
