--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
   <div class="profile-side-bar">
-    <img class="abrigo-logo" src="../../assets/uvv-brasao.png" alt="Teste" />
+    <img class="abrigo-logo" [src]="abrigo$.image" alt="Teste" />
     <div class="contato">
       <h1 class="abrigo-nome">{{abrigo$.name}}</h1>
       <h3 class="abrigo-email">{{abrigo$.email}}</h3>
