--- a/src/app/screens/register-screen/register-screen.component.html
+++ b/src/app/screens/register-screen/register-screen.component.html
@@ -12,6 +12,7 @@
         <input [(ngModel)]="telefone" required placeholder="Número de Telefone" type="text" />
         <input [(ngModel)]="cidade" required placeholder="Cidade" type="text" />
         <input [(ngModel)]="bairro" required placeholder="Bairro" type="text" />
+        <input placeholder="Logo" type="file" />
         <div class="gap">
           <input required placeholder="Senha" [type]="checkboxSelected ? 'text' : 'password'" />
           <input required placeholder="Confirmar a Senha" [type]="checkboxSelected ? 'text' : 'password'" />
