--- a/src/app/components/main-content/main-content.component.html
+++ b/src/app/components/main-content/main-content.component.html
@@ -5,11 +5,10 @@
   </div>
   <div class="anuncios-abrigo">
     <div class="animal-anuncio" *ngFor="let animal of animaisAbrigoList">
-      <img src="" alt="">
+      <img [src]="animal.image" alt="">
       <div class="descricao-anuncio">
         <h2>{{animal.name}}</h2>
-        <p>Anunciado em:</p>
-        <app-button-alt [text]="'Editar anúncio de adoção'" (clickEvent)="recieveEditEvent()"/>
+        <p>Anunciado em: 18/12/2023</p>
         <app-button-alt [text]="'Excluir anúncio de adoção'" [className]="'getpet-button-alt-delete'" (clickEvent)="deleteAnimal(animal.id)"/>
       </div>
     </div>
