--- a/src/app/screens/animal-profile/animal-profile.component.html
+++ b/src/app/screens/animal-profile/animal-profile.component.html
@@ -1,30 +1,18 @@
 <app-headerbar></app-headerbar>
 <div class="principal">
-  <div *ngFor="let pet of pets" class="animal">
+  <div class="animal">
 
     <div class="div-animal-nome">
-      <h1>{{pet.name}}</h1>
-      <h4>Disponivel para adoção desde</h4>
+      <h1>{{animal$.name}}</h1>
     </div>
     <div class="div-imagens">
       <button class="button-principal">
-        <img src="../../../assets/cachorro-teste.png" alt="">
+        <img [src]="animal$.image" alt="">
       </button>
-      <div class="div-imagens-secundarias-animal">
-        <button class="button-secundario">
-          <img src="../../../assets/cachorro-teste.png" alt="">
-        </button>
-        <button class="button-secundario">
-          <img src="../../../assets/cachorro-teste.png" alt="">
-        </button>
-        <button class="button-secundario">
-          <img src="../../../assets/cachorro-teste.png" alt="">
-        </button>
-      </div>
     </div>
     <div class="div-descricao">
       <h1>Descrição</h1>
-      <p></p>
+      <p>{{animal$.description}}</p>
     </div>
 
 
@@ -32,20 +20,20 @@
   <div class="abrigo">
     <div class="abrigo-info">
       <div class="abrigo-info-nome">
-        <h2>Nome abrigo</h2>
+        <h2>{{abrigo$.name}}</h2>
       </div>
       <div class="abrigo-info-endereco">
         <h2>Localização</h2>
-        <h4>Cidade</h4>
-        <h4>Bairro</h4>
+        <h4>{{abrigo$.cidade}}</h4>
+        <h4>{{abrigo$.bairro}}</h4>
       </div>
       <div class="abrigo-info-contato">
         <h2>Contato</h2>
-        <h4>telefone</h4>
-        <h4>e-mail</h4>
+        <h4>{{abrigo$.telefone}}</h4>
+        <h4>{{abrigo$.email}}</h4>
       </div>
 
-      <app-button [text]="'Página do Abrigo'" (clickEvent)="recieveEvent(pet.abrigoId)"/>
+      <app-button [text]="'Página do Abrigo'" (clickEvent)="recieveEvent(animal$.abrigoId)"/>
     </div>
   </div>
 </div>
